[package]
name = "handler"
version = "0.1.0"
authors = ["uchiiii <uchikun17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.4", features = ["mysql"] }
serde  = { version = "1.0", features = ["derive"]}
chrono = { version = "0.4.10", features = ["serde"] }
models = {path = "../models"}
schema = {path = "../schema"}
mysql  = {path = "../infra/mysql"}