[package]
name = "models"
version = "0.1.0"
authors = ["uchiiii <uchikun17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
serde  = { version = "1.0", features = ["derive"]}
chrono = { version = "0.4.10", features = ["serde"] }
schema = { path = "../schema"}